2.81 Crashes when separating the mesh to lose parts in Object mode #71036

Closed
opened 2019-10-23 05:17:15 +02:00 by Fady · 8 comments

System Information
Operating system: windows 10
Graphics card: GTX 1080

Blender Version
blender-2.81 beta -388c954cb537- 2019-10-21

Short description of error

2.81 Crashes when separating the mesh to lose parts in Object mode
1- selecting 2 Objects
2- spacebar search mesh separate (by lose parts)
3- crash

**System Information** Operating system: windows 10 Graphics card: GTX 1080 **Blender Version** blender-2.81 beta -388c954cb537- 2019-10-21 **Short description of error** 2.81 Crashes when separating the mesh to lose parts in Object mode 1- selecting 2 Objects 2- spacebar search mesh separate (by lose parts) 3- crash
Author

Added subscriber: @Fad.N53

Added subscriber: @Fad.N53
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-10-23 09:38:05 +02:00
Member

Can confirm, checking...

Can confirm, checking...
Member

Setting to High priority (since it is a regression in the release-branch...)

Setting to High priority (since it is a regression in the release-branch...)

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Philipp Oeser was unassigned by Campbell Barton 2019-10-24 06:26:37 +02:00
Campbell Barton self-assigned this 2019-10-24 06:26:37 +02:00

Claiming, this is error in own recent change. (although this feature is rather hidden - only accessible via search)

Claiming, this is error in own recent change. (although this feature is rather hidden - only accessible via search)

This issue was referenced by 9be3ef6c72

This issue was referenced by 9be3ef6c7257dfcb7b1477cd451a0a4b7a5921db

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:55 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#71036
No description provided.