Fix T71036: Separate loose parts crashes in object mode

Error in own recent optimization.